--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,10 @@ include("${HEVC_ROOT}/common/common.cmake")
 include("${HEVC_ROOT}/decoder/libhevcdec.cmake")
 include("${HEVC_ROOT}/encoder/libhevcenc.cmake")
 
-include("${HEVC_ROOT}/test/decoder/hevcdec.cmake")
-include("${HEVC_ROOT}/test/encoder/hevcenc.cmake")
+# include("${HEVC_ROOT}/test/decoder/hevcdec.cmake")
+# include("${HEVC_ROOT}/test/encoder/hevcenc.cmake")
 
-include("${HEVC_ROOT}/fuzzer/hevc_dec_fuzzer.cmake")
-include("${HEVC_ROOT}/fuzzer/hevc_enc_fuzzer.cmake")
+# include("${HEVC_ROOT}/fuzzer/hevc_dec_fuzzer.cmake")
+# include("${HEVC_ROOT}/fuzzer/hevc_enc_fuzzer.cmake")
+
+install(DIRECTORY ${HEVC_ROOT}/common DESTINATION include/libhevc FILES_MATCHING PATTERN "*.h")
